--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,11 +9,12 @@ on:
       - '*'
 
 jobs:
-  build:
+  build-jupyterlite:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
@@ -29,9 +30,29 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./jupyterlite/dist
+  render-quarto:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+      - name: Setup quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+      - run: |
+          quarto add r-wasm/quarto-live --no-prompt
+          quarto add coatless-quarto/pyodide --no-prompt
+          quarto install extension grantmcdermott/quarto-revealjs-clean --no-prompt
+      - name: Render quarto slides
+        uses: quarto-dev/quarto-actions/render@v2
+        with:
+          to: html # If set, it will be equivalent to `quarto render --to html`
+          path: slides # By default, the current working dir is used i.e `quarto render .`
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./slides/outputs    
 
   deploy:
-    needs: build
+    needs: [build-jupyterlite, render-quarto]
     if: github.ref == 'refs/heads/main'
     permissions:
       pages: write
