correct gh action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,9 +35,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
-      # - name: Setup quarto
-      - uses: quarto-dev/quarto-actions/setup@v2
+      - name: Setup quarto
+        uses: quarto-dev/quarto-actions/setup@v2
       - run: |
+          quarto --version
           quarto add r-wasm/quarto-live --no-prompt
           quarto add coatless-quarto/pyodide --no-prompt
           quarto install extension grantmcdermott/quarto-revealjs-clean --no-prompt
