correct gh action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
+          name: jupyterlite
           path: ./jupyterlite/dist
   render-quarto:
     runs-on: ubuntu-latest
@@ -51,6 +52,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
+          name: slides
           path: ./slides/output
 
   deploy:
