--- a/slides/_quarto.yml
+++ b/slides/_quarto.yml
@@ -1,5 +1,5 @@
 project:
-  output-dir: output
+  output-dir: ../_site
 format:
   live-revealjs:
       theme: [default, _extensions\grantmcdermott\clean\clean.scss]
