--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,10 @@ jobs:
         run: |
           cd jupyterlite
           jupyter lite build --contents content --output-dir ../_site
+          cd ..
+          pwd
+          ls
+          ls _site
       # - name: Upload artifact
       #   uses: actions/upload-pages-artifact@v3
       #   with:
@@ -50,6 +54,11 @@ jobs:
         with:
           to: html # If set, it will be equivalent to `quarto render --to html`
           path: slides # By default, the current working dir is used i.e `quarto render .`
+      - name: Check the build
+        run: |
+          pwd
+          ls
+          ls _site
       # - name: Upload artifact
       #   uses: actions/upload-pages-artifact@v3
       #   with:
