--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,11 @@ jobs:
           cd jupyterlite
           jupyter lite build --contents content --output-dir ../_site
           cd ..
+          echo "pwd"
           pwd
+          echo "ls"
           ls
+          echo "ls _site"
           ls _site
       # - name: Upload artifact
       #   uses: actions/upload-pages-artifact@v3
@@ -56,8 +59,11 @@ jobs:
           path: slides # By default, the current working dir is used i.e `quarto render .`
       - name: Check the build
         run: |
+          echo "pwd"
           pwd
+          echo "ls"
           ls
+          echo "ls _site"
           ls _site
       # - name: Upload artifact
       #   uses: actions/upload-pages-artifact@v3
@@ -69,8 +75,17 @@ jobs:
     needs: [build-jupyterlite, render-quarto]
     runs-on: ubuntu-latest
     steps:
+    - name: Any Name Bash Test Step
+      shell: bash
+      run: |
+        echo "pwd"
+        pwd
+        echo "ls"
+        ls
+        echo "ls _site"
+        ls _site
     - name: Upload artifact
-      uses: actions/upload-pages-artifact@v4
+      uses: actions/upload-pages-artifact@v3
       with:
         path: _site
 
